--- a/src/main/resources/templates/cards.html
+++ b/src/main/resources/templates/cards.html
@@ -9,7 +9,18 @@
     <link rel="stylesheet" th:href="@{/css/mtg.css}" />
 </head>
 <body>
-<div class="container-fluid">
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="http://localhost:8080/mtg">Card Catalogue</a></li>
+                <li><a href="http://localhost:8082/collection">My Awesome Collection</a></li>
+                <li><a href="http://localhost:8083/price">Price updater</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<div class="container-fluid top-container">
     <div class="row" align="center">
         <ul class="pagination">
             <li th:each="page : ${pages}" th:class="${page.number==activePage}? active"><a th:href="${page.href}" th:text="${page.number}" /></li>
