--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -9,7 +9,18 @@
         <link rel="stylesheet" th:href="@{/css/mtg.css}" />
     </head>
     <body>
-        <div class="container-fluid">
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="http://localhost:8080/mtg">Card Catalogue</a></li>
+                        <li><a href="http://localhost:8082/collection">My Awesome Collection</a></li>
+                        <li><a href="http://localhost:8083/price">Price updater</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div class="container-fluid top-container">
             <div class="col-md-8 col-md-offset-2">
                 <div class="panel panel-default">
                     <div class="panel-heading" th:text="${card.name}"/>
