--- a/src/main/resources/templates/cards.html
+++ b/src/main/resources/templates/cards.html
@@ -13,9 +13,9 @@
     <div class="container">
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="http://localhost:8080/mtg">Card Catalogue</a></li>
-                <li><a href="http://localhost:8082/collection">My Awesome Collection</a></li>
-                <li><a href="http://localhost:8083/price">Price updater</a></li>
+                <li class="active"><a href="http://localhost:8080/mtg-card-catalogue/">Card Catalogue</a></li>
+                <li><a href="http://localhost:8080/mtg-my-card-collection/">My Awesome Collection</a></li>
+                <li><a href="http://localhost:8080/mtg-price-updater/">Price updater</a></li>
             </ul>
         </div>
     </div>
@@ -30,7 +30,7 @@
 <div class="container-fluid">
     <i th:each="card, status : ${cards}" th:remove="tag">
         <div class="col-md-2">
-            <a th:href="@{/mtg/{id}(id=${card.id})}">
+            <a th:href="@{/{id}(id=${card.id})}">
                 <div class="panel panel-default">
                     <div class="panel-heading" th:text="${card.name}"/>
                     <div class="panel-body">
