--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -13,9 +13,9 @@
             <div class="container">
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="http://localhost:8080/mtg">Card Catalogue</a></li>
-                        <li><a href="http://localhost:8082/collection">My Awesome Collection</a></li>
-                        <li><a href="http://localhost:8083/price">Price updater</a></li>
+                        <li class="active"><a href="http://localhost:8080/mtg-card-catalogue/">Card Catalogue</a></li>
+                        <li><a href="http://localhost:8080/mtg-my-card-collection/">My Awesome Collection</a></li>
+                        <li><a href="http://localhost:8080/mtg-price-updater/">Price updater</a></li>
                     </ul>
                 </div>
             </div>
