--- a/src/main/resources/templates/cards.html
+++ b/src/main/resources/templates/cards.html
@@ -23,12 +23,12 @@
 <div class="container-fluid top-container">
     <div class="row pagination-row">
         <div class="col-md-3">
-            <form action="#" th:action="@{/mtg}" method="post">
+            <form action="#" th:action="@{/}" method="post">
                 <div class="input-group">
                     <input type="text" th:value="${searchBy}" name="s" class="form-control" placeholder="Search for..."/>
-                  <span class="input-group-btn">
-                    <input class="form-control" type="submit" value="Go!"/>
-                  </span>
+                      <span class="input-group-btn">
+                        <input class="btn btn-default" type="submit" value="Go!"/>
+                      </span>
                 </div>
             </form>
         </div>
