--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -24,98 +24,115 @@
             <div class="col-md-8 col-md-offset-2">
                 <div class="panel panel-default">
                     <div class="panel-heading" th:text="${card.name}"/>
-                    <div class="panel-body">
-                        <div class="col-md-6">
+                    <div class="panel-body card-details">
                             <div class="row">
-                                <div class="col-md-4">Url</div>
-                                <div class="col-md-8" th:text="${card.url}"/>
+                                <div class="col-md-3">Url</div>
+                                <div class="col-md-9" th:text="${card.url}"/>
                             </div>
                             <div class="row">
-                                <div class="col-md-4">Types</div>
-                                <div class="col-md-8" th:text="${#strings.listJoin(card.types, ', ')}"/>
+                                <div class="col-md-3">Types</div>
+                                <div class="col-md-9" th:text="${#strings.listJoin(card.types, ', ')}"/>
                             </div>
                             <div class="row">
-                                <div class="col-md-4">Subtypes</div>
-                                <div class="col-md-8" th:text="${#strings.listJoin(card.subtypes, ', ')}"/>
+                                <div class="col-md-3">Subtypes</div>
+                                <div class="col-md-9" th:text="${#strings.listJoin(card.subtypes, ', ')}"/>
                             </div>
                             <div class="row">
-                                <div class="col-md-4">Colors</div>
-                                <div class="col-md-8" th:text="${#strings.listJoin(card.colors, ', ')}"/>
+                                <div class="col-md-3">Colors</div>
+                                <div class="col-md-9" th:text="${#strings.listJoin(card.colors, ', ')}"/>
                             </div>
                             <div class="row">
-                                <div class="col-md-4">Cmc</div>
-                                <div class="col-md-8" th:text="${card.cmc}"/>
+                                <div class="col-md-3">Cmc</div>
+                                <div class="col-md-9" th:text="${card.cmc}"/>
                             </div>
                             <div class="row">
-                                <div class="col-md-4">Cost</div>
-                                <div class="col-md-8" th:text="${card.cost}"/>
+                                <div class="col-md-3">Cost</div>
+                                <div class="col-md-9" th:text="${card.cost}"/>
                             </div>
                             <div class="row">
-                                <div class="col-md-4">Cost Tmp</div>
-                                <div class="col-md-8">
+                                <div class="col-md-3">Cost Tmp</div>
+                                <div class="col-md-9">
                                     <div style="height: 20px; width: 20px;" class="icon_mountain"></div>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-4">Text</div>
-                                <div class="col-md-8" th:text="${card.text}"/>
+                                <div class="col-md-3">Text</div>
+                                <div class="col-md-9" th:text="${card.text}"/>
                             </div>
                             <div class="row">
-                                <div class="col-md-4">Power</div>
-                                <div class="col-md-8" th:text="${card.power}"/>
+                                <div class="col-md-3">Power</div>
+                                <div class="col-md-9" th:text="${card.power}"/>
                             </div>
                             <div class="row">
-                                <div class="col-md-4">Toughness</div>
-                                <div class="col-md-8" th:text="${card.toughness}"/>
+                                <div class="col-md-3">Toughness</div>
+                                <div class="col-md-9" th:text="${card.toughness}"/>
                             </div>
-                            <hr/>
+
+                        <hr/>
+
                             <div class="row">
-                                <div class="col-md-4">Edition Set</div>
-                                <div class="col-md-8" th:text="${card.editions[0].set}"/>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-4">Edition Url</div>
-                                <div class="col-md-8" th:text="${card.editions[0].set_url}"/>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-4">Watermark</div>
-                                <div class="col-md-8" th:text="${card.editions[0].watermark}"/>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-4">Rarity</div>
-                                <div class="col-md-8" th:text="${card.editions[0].rarity}"/>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-4">Artist</div>
-                                <div class="col-md-8" th:text="${card.editions[0].artist}"/>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-4">Multiverse Id</div>
-                                <div class="col-md-8" th:text="${card.editions[0].multiverse_id}"/>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-4">Number</div>
-                                <div class="col-md-8" th:text="${card.editions[0].number}"/>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-4">Layout</div>
-                                <div class="col-md-8" th:text="${card.editions[0].layout}"/>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-4">Price</div>
-                                <div class="col-md-8">
-                                    Low: <span th:text="${card.editions[0].price.low}"></span>
-                                    / Median: <span th:text="${card.editions[0].price.median}"></span>
-                                    / High: <span th:text="${card.editions[0].price.high}"></span>
+                                <div class="col-md-3">
+                                    <ul class="nav nav-pills nav-stacked">
+                                        <li th:each="edition, status : ${card.editions}" th:class="${status.index==0}? active">
+                                            <a data-toggle="pill" th:href="${'#' + edition.set_id}" th:text="${edition.set}"/>
+                                        </li>
+                                    </ul>
                                 </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-4">Image Url</div>
-                                <div class="col-md-8" th:text="${card.editions[0].image_url}"/>
-                            </div>
-                        </div>
-                        <div class="col-md-6 image">
-                            <img th:src="${imageHost} + ${card.editions[0].image_url}"/>
+                                <div class="col-md-9">
+                                    <div class="tab-content">
+                                        <div th:each="edition, status : ${card.editions}" th:id="${edition.set_id}" th:class="${status.index==0}? 'tab-pane fade in active' : 'tab-pane fade in'">
+                                            <div class="col-md-6 card-details" >
+                                                <div class="row">
+                                                    <div class="col-md-4">Edition Set</div>
+                                                    <div class="col-md-8" th:text="${edition.set}"/>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="col-md-4">Edition Url</div>
+                                                    <div class="col-md-8" th:text="${edition.set_url}"/>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="col-md-4">Watermark</div>
+                                                    <div class="col-md-8" th:text="${edition.watermark}"/>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="col-md-4">Rarity</div>
+                                                    <div class="col-md-8" th:text="${edition.rarity}"/>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="col-md-4">Artist</div>
+                                                    <div class="col-md-8" th:text="${edition.artist}"/>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="col-md-4">Multiverse Id</div>
+                                                    <div class="col-md-8" th:text="${edition.multiverse_id}"/>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="col-md-4">Number</div>
+                                                    <div class="col-md-8" th:text="${edition.number}"/>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="col-md-4">Layout</div>
+                                                    <div class="col-md-8" th:text="${edition.layout}"/>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="col-md-4">Price</div>
+                                                    <div class="col-md-8">
+                                                        Low: <span th:text="${edition.price.low}"></span>
+                                                        / Median: <span th:text="${edition.price.median}"></span>
+                                                        / High: <span th:text="${edition.price.high}"></span>
+                                                    </div>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="col-md-4">Image Url</div>
+                                                    <div class="col-md-8" th:text="${edition.image_url}"/>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6 image">
+                                                <img th:src="${imageHost} + ${edition.image_url}"/>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                         </div>
                     </div>
                 </div>
